package com.rolex.alphax.behavioral.iterator;

/**
 * @author rolex
 * @since 2020
 */
public interface Collection {
    void add(Car car);
}
