package com.rolex.alphax.behavioral.iterator;

/**
 * @author rolex
 * @since 2020
 */
public interface Iterator {
    boolean hasNext();

    Car next();
}
